@@ -5,6 +5,9 @@ http://www.springsource.org/spring-gemfire
 Changes in version 1.1.0.M3 (2011-mm-dd)
 ----------------------------------------
 
+Package org.springframework.data.gemfire.client
+* Add missing properties to PoolFactoryBean and pool namespace
+
 
 Changes in version 1.1.0.M2 (2011-08-29)
 ----------------------------------------
